<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lab_title"
        style="@style/LabText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:text="@string/lab_title" />

    <TextView
        android:id="@+id/layout_title"
        style="@style/LabText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:text="@string/layout_title"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/words"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/word_this"
            style="@style/LabText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/word_red"
            android:text="@string/word_this" />

        <TextView
            android:id="@+id/word_is"
            style="@style/LabText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/word_blue"
            android:text="@string/word_is" />

        <TextView
            android:id="@+id/word_my"
            style="@style/LabText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/word_purple"
            android:text="@string/word_my" />

        <TextView
            android:id="@+id/word_first"
            style="@style/LabText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/word_yellow"
            android:text="@string/word_first"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/application_title"
        style="@style/LabText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/black"
        android:text="@string/application_title" />

    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="18dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_button"
            style="@style/LabButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="18dp"
            android:layout_weight="1"
            android:text="@string/change" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/LabButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="18dp"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
